[BUGFIX] Fix z-index for page loading overlay
At the moment all t3-handle icons and other things have z-indexes
above 9999, but should be hidden when reloading the page.

Original-Commit-Hash: 7d8eee256e09e4909b0883529605cce4240814cb

--- a/TYPO3.Neos/Resources/Public/StyleSheet/_style-workInProgress.scss
+++ b/TYPO3.Neos/Resources/Public/StyleSheet/_style-workInProgress.scss
@@ -234,7 +234,7 @@ button.t3-create-new-content {
 	position: fixed;
 	background-color: #fff;
 	opacity: 0.8;
-	z-index: 9999;
+	z-index: 11000;
 	.t3-pageloader {
 		position: absolute;
 		left: 50%;
