--- a/TYPO3.Neos/Resources/Public/StyleSheet/style.css
+++ b/TYPO3.Neos/Resources/Public/StyleSheet/style.css
@@ -4279,7 +4279,7 @@ div.dynatree-container {
   position: fixed;
   background-color: #fff;
   opacity: 0.8;
-  z-index: 9999; }
+  z-index: 11000; }
   .t3-pageloader-wrapper .t3-pageloader {
     position: absolute;
     left: 50%;
